[BUILDINFO-1330]- mobile view , material takeoff report change , cost summary total align bug

--- a/src/client/app/build-info/framework/project/material-takeoff/material-take-off-report/material-take-off-report.scss
+++ b/src/client/app/build-info/framework/project/material-takeoff/material-take-off-report/material-take-off-report.scss
@@ -43,7 +43,7 @@
         }
       }
       .panel-body {
-        padding: 0 0 5px 15px;
+        padding: 0 0 5px 0;
       }
     }
   }
@@ -231,7 +231,7 @@
   .material-takeoff-report {
     margin-top: -5px;
     .item-header {
-     // display: none;
+     display: none;
     }
 
     .item-footer {
